# visao_obr

./: CMakeLists.txt  package.xml
cfg/: CalibracaoData.cfg
config/: detecta_objeto.yaml  detecta_objeto_teste1.yaml  teste.yaml
include/visao_obr/: CaliCirc.h  CaliGeometricCam.h  CaliRect.h  CalibracaoDataConfig.h
launch/: circle_imagem_source.launch  circle_video_source.launch  rectangle_imagem_source.launch  rectangle_video_source.launch  vision_cali.launch  vision_image_cali.launch  vision_image_source.launch  vision_video_cali.launch  vision_video_source.launch
msg/: CaliCirc.msg  CaliGeometricCam.msg  CaliRect.msg
node/: cali_server.cpp
src/: CaliClient.cpp  Calibration.cpp  Calibration.h  FindCircles.cpp  FindCircles.h  FindGeometric.cpp  FindGeometric.h  FindRectangle.cpp  FindRectangle.h  find_circles.cpp  find_rectangle.cpp
